fix overflow of flexbox items when resizing
set flex items min-width/height=0 (reset default min-width)

--- a/styles.css
+++ b/styles.css
@@ -53,8 +53,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
-    font-size: 8rem;
     background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 14%;
@@ -65,12 +63,18 @@ body {
 .odin-logo-box #odin-logo {
     max-width: 100%;
     max-height: 100%;
+    min-width: 0;
+    min-height: 0;
 }
 
 .odin-logo-box #odin-logo-text {
     display: flex;
     align-items: center;
+    color: white;
     font-family: my-font;
+    font-size: 8rem;
+    min-width: 0;
+    min-height: 0;
 }
 
 .main-right>div {
@@ -135,6 +139,7 @@ body {
 .form-container div {
     display: flex;
     gap: 10%;
+    min-height: 0;
 }
 
 .form-container div .input-block {
@@ -144,6 +149,7 @@ body {
     color: rgb(97, 95, 95);
     font-size: 1.1rem;
     font-weight: 600;
+    min-width: 0;
 }
 
 input {
@@ -152,6 +158,7 @@ input {
     border-width: 1px;
     border-color: #E5E7EB;
     border-radius: 3px;
+    /* min-width: 0; */
 }
 
 input:invalid {
